--- a/Sources/Info.plist
+++ b/Sources/Info.plist
@@ -50,5 +50,7 @@
 	</array>
 	<key>NSCameraUsageDescription</key>
 	<string>We need to scan your QR</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
